# S2DExploration

./: .gitignore  Project.toml  README.md  pyproject.toml
data/: ARMstations_BNF.csv  ARMstations_SGP.csv
marimo/: autoencoder.py  config.py  testmarimo.py  testmlcli.py
notebooks/: 01-ARMstations.jl  01-georegions.jl  01a-nearbyARM.jl  02a-exploretb.jl  02b-exploreera5.jl  02c-exploreIMERG.jl  02d-exploreptrop.jl  02e-exploreomegamodes.jl  02e.1-omegamodes.jl  02f-exploreARM.jl  02g-mergedIRvsERA5.jl  03-climatologytemplate.jl  03.1-seasonalclimatology.jl  03a-explorediurnalcycle.jl  03b-seasonaldiurnalcycle.jl  03c-seasonalcycle.jl  03d-explorepowerspectra.jl  03e-exploreverticalshear.jl  04a-exploreverticalwindshear.jl  04b-boundarylayertop.jl  04c-shearstuff.jl  05a-exploreARM.jl  05b-ARMvsERA5.jl  06a-olrwind.jl
scripts/: Tb2OLR.jl  intro.jl  plotstateboundaries.jl  smoothing.jl  stateboundaries.jl  tbtimeseries.jl  tbtimeseries_comparison.jl
scripts/ARM/: compile.jl  compilearmbeatmpre.jl  compilebnfdlprofwstats.jl  compilebnfinterpsondepre.jl  compiledlprofwstats.jl  compileinterpsondepre.jl  compileinterpsondesgl.jl
scripts/calculate/: dtdp.jl  omegac.jl  ptbl.jl  ptrop.jl  uvbl.jl
scripts/dkrz/: extractepre.jl  extractesgl.jl  info.txt
scripts/downloads/: downloadepre.jl  downloadesgl.jl  downloadimerg.jl  downloadtb.jl
src/: calculate.jl  common.jl  pressurecustom.txt  singlecustom.txt  smoothing.jl
src/.georegions/: AL.json  BNF.json  BNF_TST.json  KS.json  KS_OK.json  LA.json  OK.json  SGP.json  SGP_TST.json  TN_MS_AL.json  (+2 more)
test/: runtests.jl
