[project]
name = "s2dexploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.17.2",
    "matplotlib>=3.10.7",
    "netcdf4>=1.7.3",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "torch>=2.9.0",
    "ultraplot>=1.63.0",
]
